--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <div id="map-canvas"></div>
     <div class="postcode">
       <h1>Postcode</h1>
+      <h2>Danny Wilson</h2>
     </div>
   </body>
 </html>
