--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   <body>
     <header>
       <h1>WhatBus</h1>
+      <p>Syeef</p>
       <p>Your approximate postcode is: <span class="code"></span></p>
     </header>
     <div id="map-canvas"></div>
