--- a/index.html
+++ b/index.html
@@ -16,8 +16,10 @@
       <p>Your approximate postcode is: <span class="code"></span></p>
     </header>
     <div id="map-canvas"></div>
-    <div class="postcode">
-      <h1>Postcode</h1>
-    </div>
+    <!-- <div class="postcode"> -->
+      <form name="postcode--search">
+        <input class="postcode" type="text" name="postcode--input" placeholder="postcode">
+      </form>
+    <!-- </div> -->
   </body>
 </html>
