--- a/index.html
+++ b/index.html
@@ -17,8 +17,9 @@
     </header>
     <div id="map-canvas"></div>
     <!-- <div class="postcode"> -->
-      <form name="postcode--search">
-        <input class="postcode" type="text" name="postcode--input" placeholder="postcode">
+      <form class="postcode--search" name="postcode--search">
+        <input class="postcode--input" type="text" name="postcode--input" placeholder="postcode">
+        <input class="postcode--btn" type="button" value="Search">
       </form>
     <!-- </div> -->
   </body>
