Rephrased the line

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <body>
     <header>
       <h1>WhatBus</h1>
-      <p>Your approximate postcode is: <span class="code"></span></p>
+      <p>Your approximate location/postcode is: <span class="code"></span></p>
     </header>
     <div id="map-canvas"></div>
     <!-- <div class="postcode"> -->
