Trying to make get search function working.

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
     <div id="map-canvas"></div>
     <!-- <div class="postcode"> -->
       <form class="postcode--search" name="postcode--search">
-        <input class="postcode--input" type="text" name="postcode--input" placeholder="postcode">
-        <input class="postcode--btn" type="button" value="Search">
+        <input id="postcode--input" type="text" name="postcode--input" placeholder="postcode">
+        <input id="postcode--btn" type="button" value="Search">
       </form>
     <!-- </div> -->
   </body>
