The bus times now display in the browser, but I don't know if more than one bus shows up since it's late

--- a/index.html
+++ b/index.html
@@ -22,5 +22,6 @@
         <input id="postcode--btn" type="button" value="Search">
       </form>
     <!-- </div> -->
+    <div class="display-timetable"></div>
   </body>
 </html>
