fixed displaying bustimes

--- a/index.html
+++ b/index.html
@@ -22,6 +22,10 @@
         <input id="postcode--btn" type="button" value="Search">
       </form>
     <!-- </div> -->
-    <div class="display-timetable"></div>
+    <div class="display-timetable">
+      <ul class="display-list">
+
+      </ul>
+    </div>
   </body>
 </html>
