added alpha message

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <header>
       <h1>WhatBus</h1>
       <p>Your approximate location/postcode is: <span class="code"></span></p>
+      <p>THIS IS STILL IN ALPHA - DON'T BITE US IF IT DOESN'T WORK</p>
     </header>
     <div id="map-canvas"></div>
     <!-- <div class="postcode"> -->
