clean up and style

--- a/index.html
+++ b/index.html
@@ -11,18 +11,18 @@
     <script src="maps.js"></script>
   </head>
   <body>
+    <div class="alpha--banner">
+      <p>THIS IS STILL IN ALPHA - DON'T BITE US IF IT DOESN'T WORK</p>
+    </div>
     <header>
       <h1>WhatBus</h1>
       <p>Your approximate location/postcode is: <span class="code"></span></p>
-      <p>THIS IS STILL IN ALPHA - DON'T BITE US IF IT DOESN'T WORK</p>
-    </header>
-    <div id="map-canvas"></div>
-    <!-- <div class="postcode"> -->
-      <form class="postcode--search" name="postcode--search">
-        <input id="postcode--input" type="text" name="postcode--input" placeholder="postcode">
-        <input id="postcode--btn" type="button" value="Search">
-      </form>
-    <!-- </div> -->
+    </header> <!-- header -->
+    <div id="map-canvas">
+    </div> <!-- map-canvas -->
+    <div class="postcode">
+      <h1>We need to use your location. Sorry about that.</h1>
+    </div>
     <div class="display-timetable">
       <ul class="display-list">
 
