--- a/index.html
+++ b/index.html
@@ -11,22 +11,25 @@
     <script src="maps.js"></script>
   </head>
   <body>
-    <div class="alpha--banner">
+    <div class="alpha-banner">
       <p>THIS IS STILL IN ALPHA - DON'T BITE US IF IT DOESN'T WORK</p>
     </div>
-    <header>
-      <h1>WhatBus</h1>
-      <p>Your approximate location/postcode is: <span class="code"></span></p>
-    </header> <!-- header -->
+    <article class="main">
+      <header>
+        <h1>WhatBus</h1>
+        <p>Your approximate location/postcode is: <span class="code"></span></p>
+      </header> <!-- header -->
+    </article> <!-- main -->
     <div id="map-canvas">
     </div> <!-- map-canvas -->
     <div class="postcode">
       <h1>We need to use your location. Sorry about that.</h1>
-    </div>
-    <div class="display-timetable">
-      <ul class="display-list">
-
-      </ul>
-    </div>
+    </div> <!-- postcode -->
+    <article class="main">
+      <div class="display-timetable">
+        <ul class="display-list">
+        </ul>
+      </div> <!-- display-timetable -->
+    </article> <!-- main -->
   </body>
 </html>
