Added bus stop header;

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     </div> <!-- postcode -->
     <article class="main">
       <div class="display-timetable">
+        <h2 class="bus-stop"></h2>
         <ul class="display-list">
         </ul>
       </div> <!-- display-timetable -->
