played about in index

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
     </div> <!-- postcode -->
     <article class="main">
       <div class="display-timetable">
+        <span class="busstop-name"
         <ul class="display-list">
         </ul>
       </div> <!-- display-timetable -->
