--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
         <ul class="display-list">
         </ul>
       </div> <!-- display-timetable -->
+      <footer>
+        <p>As made by <a href="http://danwilson.co">Dan Wilson</a> and <a href="http://syeefkarim.com">Syeef Karim</a></p>
+      </footer>
     </article> <!-- main -->
   </body>
 </html>
