--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         </ul>
       </div> <!-- display-timetable -->
       <footer>
-        <p>As made by <a href="http://danwilson.co">Dan Wilson</a> and <a href="http://syeefkarim.com">Syeef Karim</a></p>
+        <p>As made by <a href="http://danwilson.co" target="_blank">Dan Wilson</a> and <a href="http://syeefkarim.com" target="_blank">Syeef Karim</a></p>
       </footer>
     </article> <!-- main -->
   </body>
