--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
     <article class="main">
       <div class="display-timetable">
         <h2 class="bus-stop"></h2>
+        <h2 class="error"></h2>
         <ul class="display-list">
         </ul>
       </div> <!-- display-timetable -->
