Input box styling

--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
     <div class="postcode">
       <h1>We need to use your location. Sorry about that. </br>Enter your postcode below to locate nearby bus stops.</h1>
       <form>
-        <input type="text" id="postcode" size="10" />
-          <input type="button" id="postbutton" value="Find Bus Stops" onclick="javascript:usePointFromPostcode(document.getElementById('postcode').value, setCenterToPoint)" />
+        <input type="text" class="postcode-input" size="10" /><br>
+          <input type="button" class="postcode-button" value="Find Bus Stops" onclick="javascript:usePointFromPostcode(document.getElementById('postcode').value, setCenterToPoint)" />
       </form>
     </div> <!-- postcode -->
     <article class="main">
