Style and name update

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>WhatBus</title>
+    <title>BusRide</title>
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
     <meta charset="utf-8">
     <link rel="stylesheet" href="css/style.css">
@@ -13,12 +13,12 @@
     <script src="maps.js"></script>
   </head>
   <body>
-    <div class="alpha-banner">
+    <!-- <div class="alpha-banner">
       <p>THIS IS STILL IN ALPHA - DON'T BITE US IF IT DOESN'T WORK</p>
-    </div>
+    </div> -->
     <article class="main">
       <header>
-        <h1>WhatBus</h1>
+        <h1>Get Me A Bus</h1>
       </header> <!-- header -->
     </article> <!-- main -->
     <div id="map-canvas">
