uncommented banner and added margin top to header

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
     <script src="maps.js"></script>
   </head>
   <body>
-    <!-- <div class="alpha-banner">
+    <div class="alpha-banner">
       <p>THIS IS STILL IN ALPHA - DON'T BITE US IF IT DOESN'T WORK</p>
-    </div> -->
+    </div>
     <article class="main">
       <header>
         <h1>Get Me A Bus</h1>
