--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
     <meta charset="utf-8">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="animate/animate.css">
     <!-- jQuery -->
     <script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
     <script src="http://www.google.com/uds/api?file=uds.js&v=1.0" type="text/javascript"></script>
