--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
     <meta charset="utf-8">
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="animate/animate.css">
     <!-- jQuery -->
     <script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
     <script src="http://www.google.com/uds/api?file=uds.js&v=1.0" type="text/javascript"></script>
@@ -19,7 +18,7 @@
     </div>
     <article class="main">
       <header>
-        <h1>Get Me A Bus</h1>
+        <h1>Get me a bus</h1>
       </header> <!-- header -->
     </article> <!-- main -->
     <div id="map-canvas">
