--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Get Me A Bus</title>
+		<title>Get me a bus - Find your local bus stops</title>
 		<meta name="viewport" content="initial-scale=1.0, user-scalable=no">
 		<meta charset="utf-8">
 		<link rel="stylesheet" href="css/style.css">
@@ -13,14 +13,11 @@
 		<script src="maps.js"></script>
 	</head>
 	<body>
-		<div class="alpha-banner">
-			<p>THIS IS STILL IN ALPHA - DON'T BITE US IF IT DOESN'T WORK</p>
-		</div>
-		<article class="main">
+		<div class="banner">
 			<header>
 				<h1>Get me a bus</h1>
-			</header> <!-- header -->
-		</article> <!-- main -->
+			</header>
+		</div>
 		<div id="map-canvas">
 		</div> <!-- map-canvas -->
 		<div class="postcode">
