--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
 			</div> <!-- display-timetable -->
 			<footer>
 				<p>As made by <a href="http://danwilson.co" target="_blank">Dan Wilson</a> and <a href="http://syeefkarim.com" target="_blank">Syeef Karim</a></p>
+				<p>Feedback is very much welcomed</p>
 			</footer>
 		</article> <!-- main -->
 
