moved maps to js

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		<script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
 		<script src="http://www.google.com/uds/api?file=uds.js&v=1.0" type="text/javascript"></script>
 		<script src="https://maps.googleapis.com/maps/api/js?v=3.exp&sensor=false"></script>
-		<script src="maps.js"></script>
+		<script src="js/maps.js"></script>
 	</head>
 	<body>
 		<div class="banner">
