--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 		<script src="http://www.google.com/uds/api?file=uds.js&v=1.0" type="text/javascript"></script>
 		<script src="https://maps.googleapis.com/maps/api/js?v=3.exp&sensor=false"></script>
 		<script src="js/maps.js"></script>
+		<link type="text/plain" rel="author" href="humans.txt" />
 	</head>
 	<body>
 		<div class="banner">
