--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 		<title>Get me a bus - Find your local bus stops</title>
 		<meta name="viewport" content="initial-scale=1.0, user-scalable=no">
 		<meta charset="utf-8">
+		<meta name="description" content="Get me a bus helps you to find your nearest bus stops and their departure times.">
 		<link rel="stylesheet" href="css/style.css">
 		<!-- jQuery -->
 		<script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
