Search function down

--- a/index.html
+++ b/index.html
@@ -22,11 +22,12 @@
 		<div id="map-canvas">
 		</div> <!-- map-canvas -->
 		<div class="postcode">
-			<h1>We need to use your location. Sorry about that. </br>Enter your postcode below to locate nearby bus stops.</h1>
-			<form>
+			<!-- <h1>We need to use your location. Sorry about that. </br>Enter your postcode below to locate nearby bus stops.</h1> -->
+			<h1>We're really sorry but the search function is currently unavailable.<br>Sorry for any inconvenience.</h1>
+			<!-- <form>
 				<input type="text" id="postcode" class="postcode-input" size="10" /><br>
 					<input type="button" class="postcode-button" id="postbutton" value="Search" onclick="javascript:usePointFromPostcode(document.getElementById('postcode').value, setCenterToPoint)" />
-			</form>
+			</form> -->
 		</div> <!-- postcode -->
 		<article class="main">
 			<div class="display-timetable">
